--- a/src/pantallas/CompletarQuest.form
+++ b/src/pantallas/CompletarQuest.form
@@ -354,6 +354,7 @@
                   <SubComponents>
                     <Component class="javax.swing.JTextArea" name="instrucciones">
                       <Properties>
+                        <Property name="editable" type="boolean" value="false"/>
                         <Property name="columns" type="int" value="20"/>
                         <Property name="rows" type="int" value="5"/>
                       </Properties>
