Diseños basicos del CU EvaluarCandidatos (sin logica). Algunos métodos no hacen nada

--- a/src/pantallas/GestionDeEvaluarCandidato.form
+++ b/src/pantallas/GestionDeEvaluarCandidato.form
@@ -205,7 +205,7 @@
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="db" green="db" red="db" type="rgb"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Evaluar candidato"/>
+            <Property name="text" type="java.lang.String" value="Evaluar Candidatos"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel2">
