--- a/src/pantallas/EvaluarCandidatoFunciones.form
+++ b/src/pantallas/EvaluarCandidatoFunciones.form
@@ -91,9 +91,9 @@
                   <Group type="103" rootIndex="1" groupAlignment="0" attributes="0">
                       <Group type="102" alignment="0" attributes="0">
                           <EmptySpace min="-2" pref="248" max="-2" attributes="0"/>
-                          <Component id="aceptar" min="-2" pref="145" max="-2" attributes="0"/>
+                          <Component id="btnVolver" min="-2" pref="145" max="-2" attributes="0"/>
                           <EmptySpace min="237" pref="237" max="-2" attributes="0"/>
-                          <Component id="cancelar" min="-2" pref="145" max="-2" attributes="0"/>
+                          <Component id="btnSiguiente" min="-2" pref="145" max="-2" attributes="0"/>
                           <EmptySpace pref="249" max="32767" attributes="0"/>
                       </Group>
                   </Group>
@@ -106,8 +106,8 @@
                       <Group type="102" alignment="0" attributes="0">
                           <EmptySpace min="-2" pref="45" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="aceptar" alignment="0" min="-2" pref="50" max="-2" attributes="0"/>
-                              <Component id="cancelar" alignment="0" min="-2" pref="50" max="-2" attributes="0"/>
+                              <Component id="btnVolver" alignment="0" min="-2" pref="50" max="-2" attributes="0"/>
+                              <Component id="btnSiguiente" alignment="0" min="-2" pref="50" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace pref="45" max="32767" attributes="0"/>
                       </Group>
@@ -116,7 +116,7 @@
             </DimensionLayout>
           </Layout>
           <SubComponents>
-            <Component class="javax.swing.JButton" name="aceptar">
+            <Component class="javax.swing.JButton" name="btnVolver">
               <Properties>
                 <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="66" green="33" red="0" type="rgb"/>
@@ -133,10 +133,10 @@
                 </Property>
               </Properties>
               <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="aceptarActionPerformed"/>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnVolverActionPerformed"/>
               </Events>
             </Component>
-            <Component class="javax.swing.JButton" name="cancelar">
+            <Component class="javax.swing.JButton" name="btnSiguiente">
               <Properties>
                 <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="66" green="33" red="0" type="rgb"/>
@@ -156,7 +156,7 @@
                 </Property>
               </Properties>
               <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cancelarActionPerformed"/>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnSiguienteActionPerformed"/>
               </Events>
             </Component>
           </SubComponents>
