--- a/src/pantallas/EvaluarCandidatoFunciones.form
+++ b/src/pantallas/EvaluarCandidatoFunciones.form
@@ -139,6 +139,7 @@
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnVolverActionPerformed"/>
+                <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="btnVolverKeyPressed"/>
               </Events>
             </Component>
             <Component class="javax.swing.JButton" name="btnSiguiente">
@@ -162,6 +163,7 @@
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnSiguienteActionPerformed"/>
+                <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="btnSiguienteKeyPressed"/>
               </Events>
             </Component>
           </SubComponents>
