--- a/src/pantallas/IngresoCandidato.form
+++ b/src/pantallas/IngresoCandidato.form
@@ -395,6 +395,7 @@
                   </Properties>
                   <Events>
                     <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="aceptarActionPerformed"/>
+                    <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="aceptarKeyPressed"/>
                   </Events>
                 </Component>
                 <Component class="javax.swing.JButton" name="cancelar">
