Pantalla 2 completar cuestionrio

--- a/src/pantallas/ModificarPuesto.form
+++ b/src/pantallas/ModificarPuesto.form
@@ -542,6 +542,7 @@
                 </Property>
               </Properties>
               <Events>
+                <EventHandler event="ancestorAdded" listener="javax.swing.event.AncestorListener" parameters="javax.swing.event.AncestorEvent" handler="tablaAncestorAdded"/>
                 <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="tablaMouseClicked"/>
               </Events>
             </Component>
